pkg: add chai-spies testing dep

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   , "devDependencies": {
         "chai": "*"
+      , "chai-spies": "*"
       , "component": "*"
       , "mocha": "*"
       , "mocha-phantomjs": "*"
